ENT-6914 Upgrading the samples to be compatible JDK 17